--- a/canvas/animate.html
+++ b/canvas/animate.html
@@ -12,9 +12,11 @@
         }
         
         #bg {
-            width: 100%;
+            width: 6500px;
             height: 100vh;
             background-image: url("../img/1206288.jpg");
+            background-repeat: repeat-x;
+            background-size: 1300px auto;
             position: relative;
             animation-name: move;
             animation-duration: 60s;
@@ -30,7 +32,6 @@
             -webkit-animation-iteration-count: infinite;
             -webkit-animation-direction: normal;
             -webkit-animation-play-state: running;
-            background-repeat:
         }
         
         @keyframes move {
