--- a/canvas/picture.html
+++ b/canvas/picture.html
@@ -8,6 +8,8 @@
         .pic {
             width: 200px;
             height: 200px;
+            float: left;
+            margin-left: 10px;
         }
         
         .pic:hover {
@@ -60,6 +62,21 @@
 </head>
 
 <body>
+    <div class="pic">
+        <img src="../img/org_20170117125731_196.jpg" />
+    </div>
+    <div class="pic">
+        <img src="../img/org_20170117125731_196.jpg" />
+    </div>
+    <div class="pic">
+        <img src="../img/org_20170117125731_196.jpg" />
+    </div>
+    <div class="pic">
+        <img src="../img/org_20170117125731_196.jpg" />
+    </div>
+    <div class="pic">
+        <img src="../img/org_20170117125731_196.jpg" />
+    </div>
     <div class="pic">
         <img src="../img/org_20170117125731_196.jpg" />
     </div>
