--- a/canvas/animate.html
+++ b/canvas/animate.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>animate</title>
+    <title>图片滚动</title>
     <style>
         * {
             margin: 0;
