--- a/css3/layout3.html
+++ b/css3/layout3.html
@@ -5,41 +5,39 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>双飞翼和圣杯布局</title>
+  <title>双飞翼布局</title>
   <style>
     * {
       margin: 0;
       padding: 0;
     }
 
-    .outer {
-      overflow: hidden;
-      padding: 0 100px;
+    .content {
+      overflow: hidden
     }
 
     .middle {
-      position: relative;
       width: 100%;
       float: left;
+    }
+
+    .inner-middle {
+      width: 100%;
       height: 80px;
       background: green;
     }
 
     .left {
-      position: relative;
       width: 100px;
       float: left;
-      left: -100px;
       height: 80px;
       margin-left: -100%;
       background: yellow;
     }
 
     .right {
-      position: relative;
       width: 100px;
       float: left;
-      right: -100px;
       height: 80px;
       margin-left: -100px;
       background: pink;
@@ -48,11 +46,12 @@
 </head>
 
 <body>
-  <!-- 圣杯布局 middle 最先 -->
-  <div class="outer">
-    <div class="middle">圣杯-middle</div>
-    <div class="left">圣杯-left</div>
-    <div class="right">圣杯-right</div>
+  <div class="content">
+    <div class="middle">
+      <div class="inner-middle"></div>
+    </div>
+    <div class="left"></div>
+    <div class="right"></div>
   </div>
 </body>
 
