--- a/css3/center.html
+++ b/css3/center.html
@@ -59,5 +59,14 @@
     <div class="child"></div>
   </div>
 </body>
+<script>
+  var obj = {
+    name: 'zhangsan',
+    age: 26,
+    sex: 1,
+    adress: '121212'
+  }
+  let arr = Object.keys(obj);
+</script>
 
 </html>
